--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </button>
                 </div>
                 <div class="tile">
-                    <img src="images/rvimage2.jpeg" alt="photo of american trel apples" />
+                    <img src="images/ac2.jpg" alt="photo of american trel apples" />
                     <h4>AC maintenance</h4>
                     <p>AC maintenance is impossible to keeping the inside of your comfortable. It’s also important for
                         the longevity of your
@@ -64,7 +64,7 @@
                     </button>
                 </div>
                 <div class="tile">
-                    <img src="images/rvphoto2.jpeg" alt="photo of red delicious apple" />
+                    <img src="images/furnace2.jpg" alt="photo of red delicious apple" />
                     <h4>Furnace inspection</h4>
                     <p>
                         Furnaces,like the AC, is important to keeping the comfort inside your RV during the cold months.
