--- a/services.html
+++ b/services.html
@@ -219,7 +219,7 @@
                     <img src="images/ac.jpg" alt="services photo" class="service_img" />
                 </div>
                 <div class="col-md-6" id="service_content_sc">
-                    <h1 class="">AC maintenance</h1>
+                    <h1 class="s_hd">AC maintenance</h1>
                     <p>
                         AC maintenance is impossible to keeping the inside of your comfortable. It’s also important for the
                         longevity of your
@@ -247,7 +247,7 @@
                     <img src="images/furnace2.jpg" alt="services photo" class="service_img" />
                 </div>
                 <div class="col-md-6" id="service_content_sc">
-                    <h1 class="">Furnace inspection $95</h1>
+                    <h1 class="s_hd">Furnace inspection $95</h1>
                     <p>
                         Furnaces,like the AC, is important to keeping the comfort inside your RV during the cold months. A
                         failure in the
@@ -275,7 +275,7 @@
                     <img src="images/waterheater.jpg" alt="services photo" class="service_img" />
                 </div>
                 <div class="col-md-6" id="service_content_sc">
-                    <h1 class="">Water heater inspection $95</h1>
+                    <h1 class="s_hd">Water heater inspection $95</h1>
                     <p>
                         Water heater inspection $95. The water heater is similar to the furnace in that is will have overheating
                         protection
