--- a/services.html
+++ b/services.html
@@ -47,6 +47,7 @@
             font-weight: 650;
         }
         .service_img{
+            margin-top: 27px;
             border-radius: 30px;
         }
 
@@ -55,9 +56,7 @@
           box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);  
         }
 
-        #service_content_sc{
-            margin-top: 20px;
-           
+        #service_content_sc{           
             font-size: 18px;
         }
 
@@ -78,6 +77,7 @@
                 <a href="index.html" class="nav-link">HOME</a>
                 <a href="services.html" class="nav-link">OUR SERVICE</a>
                 <a href="#about" class="nav-link">ABOUT</a>
+                <a href="#contactus" class="nav-link">CONTACT US</a>
             </nav>
         </div>
     </header>
@@ -322,7 +322,7 @@
                     </ul>
                 </div>
 
-                <div class="col-xs-6 col-md-3">
+                <div class="col-xs-6 col-md-3" id="contactus">
                     <h6>Contact Us</h6>
                     <ul class="footer-links">
                         <li><a href="#">Home</a></li>
@@ -330,6 +330,29 @@
                         <li><a href="#">Privacy Policy</a></li>
 
                     </ul>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <h6 class="email_hd">Get in touch :</h6>
+                    <section class="email_sec">
+                        <form>
+                            <div class="email_input_sec">
+                                <div class="email_input">
+                                    <input name="name" placeholder="Name" type="text" class="text" />
+                                </div>
+                                <div class="email_input">
+                                    <input name="Subject" placeholder="Subject" type="text" class="text" />
+                                </div>
+                            </div>
+                            <div class="email_input_sec">
+                                <div class="email_input_textarea">
+                                    <textarea name="message" placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                            <div class="email_button_sec">
+                                    <a href="#" class="email_button">Send Message</a>
+                            </div>
+                        </form>
+                    </section>
                 </div>
             </div>
             <hr>
