--- a/services.html
+++ b/services.html
@@ -30,7 +30,13 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            padding: 70px;
+        }
+
+        @media (max-width: 680px) {
+         .services_colmn{
             padding: 20px;
+        }
         }
         .row{
             margin-left: 0;
@@ -76,7 +82,7 @@
             <nav id="nav-bar">
                 <a href="index.html" class="nav-link">HOME</a>
                 <a href="services.html" class="nav-link">OUR SERVICE</a>
-                <a href="#about" class="nav-link">ABOUT</a>
+                <a href="index.html#about" class="nav-link">ABOUT</a>
                 <a href="#contactus" class="nav-link">CONTACT US</a>
             </nav>
         </div>
