--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                         Learn More
                     </button>
                 </div>
+            </div>
+            <div class="sec-content-div flexible">
                 <div class="tile">
                     <img src="images/furnace2.jpg" alt="photo of red delicious apple" />
                     <h4>Furnace inspection</h4>
@@ -74,7 +76,6 @@
                         Learn More
                     </button>
                 </div>
-
                 <div class="tile">
                     <img src="images/waterheater.jpg" alt="photo of red delicious apple" />
                     <h4>Water heater inspection</h4>
@@ -86,7 +87,6 @@
                         Learn More
                     </button>
                 </div>
-
             </div>
 
         </section>
