--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header id="header" style="background-image: url('images/rvimage6.jpg');">
         <section id="home-sec" class="flexible home-sec">
             <div class="eye-grabber">
-                <h1>Embark on Your Next<br> Journey with Confidence.</h1>
+                <h1><span class="word">Embark on Your Next<br>Journey with Confidence.</span></h1>
                 <button class="btn hero_btn" onclick="window.location.href = '#services';">
                     Services
                 </button>
