--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="sec-content-div flexible">
 
                 <div class="tile">
-                    <img src="images/rvimage1.jpeg" alt="photo of amber apples" />
+                    <img src="images/roof.jpg" alt="photo of amber apples" />
                     <h4>Roof Maintenance and inspection</h4>
                     <p>
                         Roof maintenance is vital to the longevity of any RV. Inspections should be done every three to
