--- a/test.html
+++ b/test.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar 🧪 </title>
-    <!-- Bootstrap css-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Navbar with Custom Logo Height</title>
 
-<link rel="stylesheet" href="css/index.css" />
+            <!-- Bootstrap css-->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+                integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <style>
+        .navbar-logo {
+            height: 50px;
+            /* Adjust the height as needed */
+        }
+    </style>
 </head>
+
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a href="index.html">
-                <img class="navbar-brand" src="images/logo.png" alt="Company Logo" id="header-img" /></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container">
+            <!-- Your Custom Logo -->
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="Your Logo" class="navbar-logo">
+            </a>
+
+            <!-- Hamburger Menu Button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="nav_spacer"></div>
-                <ul class="d-flex navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html">OUR SERVICE</a>
-                    </li>
 
+            <!-- Navbar Links -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">ABOUT</a>
+                        <a class="nav-link" href="#">Home</a>
                     </li>
-                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#contactus">CONTACT US</a>
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
-    </nav> 
+    </nav>
 
-    <!--
-                <div class="nav_header_content">
-            <a href="index.html">
-                <img src="images/logo.png" alt="Company Logo" id="header-img" /></a>
-            <nav id="nav-bar">
-                <a href="index.html" class="nav-link">HOME</a>
-                <a href="services.html" class="nav-link">OUR SERVICE</a>
-                <a href="#about" class="nav-link">ABOUT</a>
-                <a href="#contactus" class="nav-link">CONTACT US</a>
-            </nav>
-        </div>
-    -->
-   <!-- Bootstrap js bundle-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
+        <!-- Bootstrap js bundle-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
 </body>
+
 </html>
